--- a/src/app/analytics/statement2/statement2.component.html
+++ b/src/app/analytics/statement2/statement2.component.html
@@ -1,19 +1,19 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <select class="form-control">
+            <select class="form-control" [(ngModel)] = "selectedYear">
                 <option value = "">-- Select Year --</option>
                 <option *ngFor = "let year of academicYear">{{year}}</option>
             </select>
         </div>
         <div class="col-md-3">
-            <select class="form-control">
+            <select class="form-control" [(ngModel)] = "selectedTerm">
                 <option value = "">-- Select Semester --</option>
-                <option *ngFor = "let term of termDetails">Semester {{term}}</option>
+                <option *ngFor = "let term of termDetails">{{term}}</option>
             </select>
         </div>
         <div class="col-md-3">
-            <button type="button" class="btn btn-default">
+            <button type="button" class="btn btn-default" (click) = "get_student_details()" >
                 <span class="glyphicon glyphicon-search"></span> Search
               </button>
         </div>
