--- a/src/app/common-left-nav/common-left-nav.component.html
+++ b/src/app/common-left-nav/common-left-nav.component.html
@@ -18,7 +18,7 @@
                             [style.background-color]="1 === selectedIndex ? '#F3FBFE' : ''"
                             [style.color]="1 === selectedIndex ? '#00303f' : ''">
                             <i class="fa fa-circle-o sidebar-small-icons"></i>
-                            <span class="sidebar-font-family"><abbr>Statement-2</abbr></span>
+                            <span class="sidebar-font-family"><abbr>Performance Analytics</abbr></span>
 
                         </a>
                     </li>
