--- a/src/app/common-header/common-header.component.html
+++ b/src/app/common-header/common-header.component.html
@@ -3,13 +3,22 @@
         <a>
             <img src="assets/images/heraizen_logo.png" class="logo" />
         </a>
+
         <nav class="navbar navbar-fixed-top" style="height: 50px;">
+           
             <a href="#" class="sidebar-toggle" data-toggle="control-sidebar" role="button" (click)="resize()">
                 <span class="sr-only">Toggle navigation</span>
             </a>
-            <span style=" color:#ffffff !important; margin-left: 1030px;" *ngIf="user">{{user.user}}
+            <span style=" color:#ffffff !important; margin-left: 1030px;" class="user" *ngIf="user">{{user.user}}
             </span>
-            <i style=" color:#ffffff !important;" class="fas fa-sign-out-alt ml-auto" (click)="logOut()"></i>
+       
+
+            <div class="logout">
+
+                <i style="color:#ffffff !important;" class="fas fa-sign-out-alt ml-auto" (click)="logOut()">Logout</i>
+            </div>
+
+
         </nav>
     </header>
-</div>y
+</div>
