--- a/src/app/analytics/statement2/statement2.component.css
+++ b/src/app/analytics/statement2/statement2.component.css
@@ -9,3 +9,13 @@ td {
 .search-bar{
     margin: 1.5rem 0 1.5rem 0;
 }
+
+.spinner{
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+}
