--- a/src/app/analytics/statement2/statement2.component.html
+++ b/src/app/analytics/statement2/statement2.component.html
@@ -1,4 +1,5 @@
 <div class="row search-bar mt-3">
+
   <div class="col-md-3">
     <select class="form-control" [(ngModel)]="selectedYear">
       <option value="">-- Select Year --</option>
@@ -16,43 +17,51 @@
       <span class="glyphicon glyphicon-search"></span> Search
     </button>
   </div>
+
 </div>
-  <div class="row">
+
+
+<div class="row">
 
   <!-- Spinner -->
-    <mat-spinner class="spinner" *ngIf = "showSpinner === true"></mat-spinner>
-
-
-    <div class="col-md-8">
-
-      <div *ngIf="columnChart">
-
-        <google-chart [data]="columnChart" (chartSelect)="onChartSelect($event)" data-toggle="modal"
-          data-target="#exampleModal"></google-chart>
-
-      </div>
-    </div>
+  <mat-spinner class="spinner" *ngIf="showSpinner === true"></mat-spinner>
+  
+  <div *ngIf="error_flag">
+    <p class="error-message">{{error_message}}</p>
   </div>
 
 
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <div class="jumbotron">
-            <h5 class="modal-title" id="exampleModalLabel"><b>Attendance and University Exam Details</b></h5>
-          </div>
-          <p><b>Course Name:{{course}}</b></p>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+  <div class="col-md-8">
+
+    <div *ngIf="chart_visibility">
+
+      <google-chart [data]="columnChart" (chartSelect)="onChartSelect($event)" data-toggle="modal"
+        data-target="#exampleModal"></google-chart>
+
+    </div>
+  </div>
+
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="jumbotron">
+          <h5 class="modal-title" id="exampleModalLabel"><b>Attendance and University Exam Details</b></h5>
         </div>
-        <div class="modal-body">
-          <h5>Class Attended:{{present}} Class Taken:{{total}} UE:{{UE}}/100</h5>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">OK</button>
-        </div>
+        <p><b>Course Name:{{course}}</b></p>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <h5> Class Attended : {{present}} <br> Class Taken : {{total}} <br> UE : {{UE}}/100 </h5>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
       </div>
     </div>
   </div>
+</div>
