--- a/src/app/analytics/statement2/statement2.component.html
+++ b/src/app/analytics/statement2/statement2.component.html
@@ -13,7 +13,7 @@
     </select>
   </div>
   <div class="col-md-3">
-    <button type="button" class="btn btn-default" (click)="get_student_details()">
+    <button type="button" class="btn btn-default" (click)="get_user_role_type()">
       <span class="glyphicon glyphicon-search"></span> Search
     </button>
   </div>
@@ -65,3 +65,94 @@
     </div>
   </div>
 </div>
+
+
+
+<!--FACULTY-->
+
+<!-- <div class="container" *ngIf="u.includes('FACULTY') && u.includes('HOD') == false" >
+  <div class="row">
+      <tr>
+          <td>
+              Academic Year
+              <select [(ngModel)]="SelectedYear">
+                  <option>Select Year</option>
+                  <option *ngFor="let year of a">{{year}}</option>
+              </select>
+          </td>
+          <td>
+              Term
+              <select [(ngModel)]="SelectedSem">
+                  <option>Select Semester</option>
+                  <option *ngFor="let sem of semester">{{sem}}</option>
+              </select>
+          </td>
+          <td>
+              <button class="btn" (click)="search()">Search</button>
+          </td>
+      </tr>
+      <hr>
+  </div>
+  <div *ngIf="columnChart">
+      <google-chart [data]="columnChart" (chartSelect)="onChartSelect($event)" data-toggle="modal" data-target="#exampleModal"></google-chart>
+  </div>
+  <div *ngIf="column">
+      <google-chart [data]="column" (chartSelect)="onChartSelect($event)" data-toggle="modal" data-target="#example"></google-chart>
+  </div>
+</div>
+<div class="container" *ngIf="u.includes('HOD')">
+  <div class="row">
+      <tr>
+          <td>
+              Academic Year
+              <select [(ngModel)]="SelectedYear">
+                  <option>Select Year</option>
+                  <option *ngFor="let year of a">{{year}}</option>
+              </select>
+          </td>
+          <td>
+              Term
+              <select [(ngModel)]="SelectedSem">
+                  <option>Select Semester</option>
+                  <option *ngFor="let sem of semester">{{sem}}</option>
+              </select>
+          </td>
+          <td>
+              <button class="btn" (click)="search()">Search</button>
+          </td>
+      </tr>
+      <hr>
+  </div>
+  <div class="row">
+      <div >
+              <ul *ngFor="let name of facultyNames">
+                  <button class="btn" (click)="faculty($event)">{{name}}</button>
+              </ul>    
+      </div>
+  </div>
+</div>
+<div class="container" *ngIf="u.includes('PRINCIPAL')">
+  <div class="row">
+      <tr>
+          <td>
+              Hello
+              Academic Year
+              <select [(ngModel)]="SelectedYear">
+                  <option>Select Year</option>
+                  <option *ngFor="let year of a">{{year}}</option>
+              </select>
+          </td>
+          <td>
+              Term
+              <select [(ngModel)]="SelectedSem">
+                  <option>Select Semester</option>
+                  <option *ngFor="let sem of semester">{{sem}}</option>
+              </select>
+          </td>
+          <td>
+              <button class="btn" (click)="search()">Search</button>
+          </td>
+      </tr>
+      <hr>
+  </div>
+</div> -->
