--- a/src/app/analytics/statement2/statement2.component.html
+++ b/src/app/analytics/statement2/statement2.component.html
@@ -1,26 +1,34 @@
-<div class="row search-bar mt-3" *ngIf="user_roles.includes('STUDENT')">
+<div *ngIf="user_roles.includes('STUDENT')">
 
-  <div class="col-md-3">
+
+
+<div class="row search-bar mt-3" >
+
+  <div class="col-md-4">
     <select class="form-control" [(ngModel)]="selectedYear">
       <option value="">-- Select Year --</option>
       <option *ngFor="let year of academicYear">{{year}}</option>
     </select>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-4">
     <select class="form-control" [(ngModel)]="selectedTerm">
       <option value="">-- Select Semester --</option>
       <option *ngFor="let term of termDetails">{{term}}</option>
     </select>
   </div>
-  <div class="col-md-3">
-    <button type="button" class="btn btn-default" (click)="get_user_role_type()">
+  <div class="col-md-4">
+    <button type="button" class="btn button btn-default" (click)="get_user_role_type()">
       <span class="glyphicon glyphicon-search"></span> Search
     </button>
 
   </div>
+</div>
+  <hr>
 
+  <div class="row charts">
+  
 
-    <div class="col-md-8">
+    <div class="col-md-12">
 
       <div *ngIf="chart_visibility">
 
@@ -29,12 +37,126 @@
 
       </div>
     </div>
-  
+   
+  </div>
+
+</div>
+
+<!-- Faculty -->
+<div
+  *ngIf="user_roles.includes('FACULTY') && user_roles.includes('HOD') == false && user_roles.includes('PRINCIPAL') == false">
+
+
+  <div class="row search-bar mt-3">
+
+    <div class="col-md-4">
+      <select class="form-control" [(ngModel)]="selectedYear">
+        <option value="">-- Select Year --</option>
+        <option *ngFor="let year of academicYear">{{year}}</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <select class="form-control" [(ngModel)]="selectedTerm">
+        <option value="">-- Select Semester --</option>
+        <option *ngFor="let term of termDetails">{{term}}</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <button type="button" class="btn button btn-default" (click)="get_user_role_type()">
+        <span class="glyphicon glyphicon-search"></span> Search
+      </button>
+    </div>
+
+  </div>
+
+  <hr>
+  <div class="row charts">
+    <div class="col-md-2">
+
+    </div>
+    <div class="col-md-8">
+
+      <div *ngIf="chart_visibility">
+
+        <google-chart [data]="columnChart" (chartSelect)="onFacultyChartSelect($event)" data-toggle="modal"
+          data-target="#exampleModal"></google-chart>
+
+      </div>
+    </div>
+    <div class="col-md-2">
+
+    </div>
+  </div>
+
 </div>
 
 
-<!-- Faculty -->
-<div *ngIf="user_roles.includes('FACULTY') && user_roles.includes('HOD') == false && user_roles.includes('PRINCIPAL') == false">
+<!-- Hod -->
+<div *ngIf="user_roles.includes('HOD')">
+
+  <div class="row search-bar mt-3">
+
+    <div class="col-md-4">
+      <select class="form-control" [(ngModel)]="selectedYear">
+        <option value="">-- Select Year --</option>
+        <option *ngFor="let year of academicYear">{{year}}</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <select class="form-control" [(ngModel)]="selectedTerm">
+        <option value="">-- Select Semester --</option>
+        <option *ngFor="let term of termDetails">{{term}}</option>
+      </select>
+    </div>
+    <div class="col-md-4">
+      <button type="button" class="btn button btn-default" (click)="get_user_role_type()">
+        <span class="glyphicon glyphicon-search"></span> Search
+      </button>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row charts">
+
+    <div class="col-md-2" *ngIf="hod_display_names">
+      <div class="text-left">
+        <button class="btn button btn-light btn-block text-left" *ngFor="let faculty of facultyNames"
+          (click)="get_hod_details($event.target.value, faculty)"
+          value="{{faculty['employeeGivenId']}}">{{faculty['name']}}
+        </button>
+      </div>
+    </div>
+
+
+    <div class="col-md-10">
+
+      <div *ngIf="chart_visibility">
+        <div class="v1">
+
+            <span id="facultyName">
+              Faculty: {{facultyName}}
+            </span>
+            <span id="facultyID">
+              Faculty Id: {{eid}}
+            </span>
+            <span id="courseTitle">
+              Course-Wise Attendance %
+            </span>
+        
+          <google-chart [data]="columnChart" (chartSelect)="onFacultyChartSelect($event)" data-toggle="modal"
+            data-target="#facultyModal"></google-chart>
+
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<!-- Principal -->
+<div *ngIf="user_roles.includes('PRINCIPAL')">
 
 
   <div class="row search-bar mt-3">
@@ -51,128 +173,56 @@
         <option *ngFor="let term of termDetails">{{term}}</option>
       </select>
     </div>
+
     <div class="col-md-3">
-      <button type="button" class="btn btn-default" (click)="get_user_role_type()">
+      <select class="form-control" [(ngModel)]="selectedDept">
+        <option value="">-- Select Department --</option>
+        <option *ngFor="let dept of deptName">{{dept}}</option>
+      </select>
+    </div>
+
+    <div class="col-md-3">
+      <button type="button" class="button btn btn-default" (click)="get_principal_faculty_names($event.target.value)">
         <span class="glyphicon glyphicon-search"></span> Search
       </button>
     </div>
-
   </div>
 
+  <div class="row">
 
-  <div class="col-md-10">
-
-    <div *ngIf="chart_visibility">
-
-      <google-chart [data]="columnChart" (chartSelect)="onFacultyChartSelect($event)" data-toggle="modal"
-        data-target="#exampleModal"></google-chart>
-
+    <div class="col-md-2" *ngIf="principal_display_names">
+      <div class="text-left">
+        <button class="btn button btn-light btn-block text-left" *ngFor="let faculty of facultyNames"
+          (click)="get_principal_details($event.target.value, faculty )"
+          value="{{faculty['employeeGivenId']}}">{{faculty['name']}}
+        </button>
+      </div>
     </div>
-  </div>
-</div>
+
+    <div class="col-md-10">
+
+      <div *ngIf="chart_visibility">
+        <div class="v1">
 
 
-<!-- Hod -->
-<div *ngIf="user_roles.includes('HOD')">
-
-<div class="row search-bar mt-3" >
-
-  <div class="col-md-3">
-    <select class="form-control" [(ngModel)]="selectedYear">
-      <option value="">-- Select Year --</option>
-      <option *ngFor="let year of academicYear">{{year}}</option>
-    </select>
-  </div>
-  <div class="col-md-3">
-    <select class="form-control" [(ngModel)]="selectedTerm">
-      <option value="">-- Select Semester --</option>
-      <option *ngFor="let term of termDetails">{{term}}</option>
-    </select>
-  </div>
-  <div class="col-md-3">
-    <button type="button" class="btn btn-default" (click)="get_user_role_type()">
-      <span class="glyphicon glyphicon-search"></span> Search
-    </button>
-  </div>
-</div>
-
-<div class="row">
-
-  <div class="col-md-2" *ngIf="hod_display_names">
-    <div class="text-left">
-      <button class="btn btn-light btn-block text-left" *ngFor="let faculty of facultyNames"
-        (click)="get_hod_details($event.target.value)" value="{{faculty['employeeGivenId']}}">{{faculty['name']}}
-      </button>
+          <div class="mb-3">
+            <span id="facultyName">
+              Faculty: {{facultyName}}
+            </span>
+            <span id="facultyID">
+              Faculty Id: {{eid}}
+            </span>
+            <span id="courseTitle">
+              Course-Wise Attendance %
+            </span>
+          </div>
+          <google-chart [data]="columnChart" (chartSelect)="onFacultyChartSelect($event)" data-toggle="modal"
+            data-target="#facultyModal"></google-chart>
+        </div>
+      </div>
     </div>
+
   </div>
-
-  <div class="col-md-10">
-
-    <div *ngIf="chart_visibility">
-
-      <google-chart [data]="columnChart" (chartSelect)="onFacultyChartSelect($event)" data-toggle="modal"
-        data-target="#facultyModal"></google-chart>
-
-    </div>
-  </div>
-
-</div>
-</div>
-
-<!-- Principal -->
-<div *ngIf="user_roles.includes('PRINCIPAL')">
-
-
-<div class="row search-bar mt-3" >
-
-  <div class="col-md-3">
-    <select class="form-control" [(ngModel)]="selectedYear">
-      <option value="">-- Select Year --</option>
-      <option *ngFor="let year of academicYear">{{year}}</option>
-    </select>
-  </div>
-  <div class="col-md-3">
-    <select class="form-control" [(ngModel)]="selectedTerm">
-      <option value="">-- Select Semester --</option>
-      <option *ngFor="let term of termDetails">{{term}}</option>
-    </select>
-  </div>
-
-  <div class="col-md-3">
-    <select class="form-control" [(ngModel)]="selectedDept">
-      <option value="">-- Select Department --</option>
-      <option *ngFor="let dept of deptName">{{dept}}</option>
-    </select>
-  </div>
-
-  <div class="col-md-3">
-    <button type="button" class="btn btn-default" (click)="get_principal_faculty_names($event.target.value)">
-      <span class="glyphicon glyphicon-search"></span> Search
-    </button>
-  </div>
-</div>
-
-<div class="row">
-
-  <div class="col-md-2" *ngIf="principal_display_names">
-    <div class="text-left">
-      <button class="btn btn-light btn-block text-left" *ngFor="let faculty of facultyNames"
-        (click)="get_principal_details($event.target.value)" value="{{faculty['employeeGivenId']}}">{{faculty['name']}}
-      </button>
-    </div>
-  </div>
-
-  <div class="col-md-10">
-
-    <div *ngIf="chart_visibility">
-
-      <google-chart [data]="columnChart" (chartSelect)="onFacultyChartSelect($event)" data-toggle="modal"
-        data-target="#facultyModal"></google-chart>
-
-    </div>
-  </div>
-
-</div>
 </div>
 
 <!-- Modal -->
@@ -181,15 +231,22 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="jumbotron">
-          <h5 class="modal-title" id="exampleModalLabel"><b>Attendance and University Exam Details</b></h5>
-        </div>
-        <p><b>Course Name:{{course}}</b></p>
+     
+          <h4 class="modal-title-center"><b>Course Details</b></h4>
+          <div> <b>Course:</b>{{course}}</div>
+        
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <h5> Class Attended : {{present}} <br> Class Taken : {{total}} <br> UE : {{UE}}/100 </h5>
+        <div class="row">
+          
+          <div class="col-md-4"><B> Class Attended:</B>{{present}}</div>
+          <div class="col-md-4"><B>Class Taken:</B>{{total}}</div>
+          <div class="col-md-4"><B>Average UE:</B>{{UE}}/100</div>
+        </div>
+
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
       </div>
@@ -199,20 +256,26 @@
 
 
 <!-- Faculty Modal -->
-<div class="modal fade" id="facultyModal"  tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="facultyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <div class="jumbotron">
-          <h5 class="modal-title"><b>Attendance and University Exam Details</b></h5>
-        </div>
-        <p><b>Course Name:{{course}}</b></p>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+
+        <h5 class="modal-title"><b>Attendance and University Exam Details</b></h5>
       </div>
+
+
       <div class="modal-body">
-        <h5>Class Taken : {{totalClassTaken}} <br> UE : {{UE}}/100 </h5>
+        <p><b>Course Name:{{course}}</b></p>
+        <p><b>Faculty:{{facultyName}}</b></p>
+        <hr>
+        <div class="row">
+          <div class="col-md-3"><B>Class Taken:</B>{{totalClassTaken}}</div>
+          <div class="col-md-4"><B>Average UE:</B>{{UE}}/100</div>
+        </div>
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
       </div>
@@ -227,92 +290,3 @@
 <div *ngIf="error_flag">
   <p class="error-message">{{error_message}}</p>
 </div>
-
-<!--FACULTY-->
-
-<!-- <div class="container" *ngIf="u.includes('FACULTY') && u.includes('HOD') == false" >
-  <div class="row">
-      <tr>
-          <td>
-              Academic Year
-              <select [(ngModel)]="SelectedYear">
-                  <option>Select Year</option>
-                  <option *ngFor="let year of a">{{year}}</option>
-              </select>
-          </td>
-          <td>
-              Term
-              <select [(ngModel)]="SelectedSem">
-                  <option>Select Semester</option>
-                  <option *ngFor="let sem of semester">{{sem}}</option>
-              </select>
-          </td>
-          <td>
-              <button class="btn" (click)="search()">Search</button>
-          </td>
-      </tr>
-      <hr>
-  </div>
-  <div *ngIf="columnChart">
-      <google-chart [data]="columnChart" (chartSelect)="onChartSelect($event)" data-toggle="modal" data-target="#exampleModal"></google-chart>
-  </div>
-  <div *ngIf="column">
-      <google-chart [data]="column" (chartSelect)="onChartSelect($event)" data-toggle="modal" data-target="#example"></google-chart>
-  </div>
-</div>
-<div class="container" *ngIf="u.includes('HOD')">
-  <div class="row">
-      <tr>
-          <td>
-              Academic Year
-              <select [(ngModel)]="SelectedYear">
-                  <option>Select Year</option>
-                  <option *ngFor="let year of a">{{year}}</option>
-              </select>
-          </td>
-          <td>
-              Term
-              <select [(ngModel)]="SelectedSem">
-                  <option>Select Semester</option>
-                  <option *ngFor="let sem of semester">{{sem}}</option>
-              </select>
-          </td>
-          <td>
-              <button class="btn" (click)="search()">Search</button>
-          </td>
-      </tr>
-      <hr>
-  </div>
-  <div class="row">
-      <div >
-              <ul *ngFor="let name of facultyNames">
-                  <button class="btn" (click)="faculty($event)">{{name}}</button>
-              </ul>    
-      </div>
-  </div>
-</div>
-<div class="container" *ngIf="u.includes('PRINCIPAL')">
-  <div class="row">
-      <tr>
-          <td>
-              Hello
-              Academic Year
-              <select [(ngModel)]="SelectedYear">
-                  <option>Select Year</option>
-                  <option *ngFor="let year of a">{{year}}</option>
-              </select>
-          </td>
-          <td>
-              Term
-              <select [(ngModel)]="SelectedSem">
-                  <option>Select Semester</option>
-                  <option *ngFor="let sem of semester">{{sem}}</option>
-              </select>
-          </td>
-          <td>
-              <button class="btn" (click)="search()">Search</button>
-          </td>
-      </tr>
-      <hr>
-  </div>
-</div> -->
