fixed name display in modal

--- a/src/app/analytics/statement2/statement2.component.html
+++ b/src/app/analytics/statement2/statement2.component.html
@@ -188,7 +188,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row charts">
 
     <div class="col-md-2" *ngIf="principal_display_names">
       <div class="text-left">
