--- a/src/app/analytics/statement2/statement2.component.css
+++ b/src/app/analytics/statement2/statement2.component.css
@@ -7,9 +7,7 @@ td {
     color: rgb(17, 70, 245)(23, 119, 82);
 }
 
-.search-bar{
-    margin: 1.5rem 0 1.5rem 0;
-}
+
 
 .spinner{
     position: absolute;
@@ -61,22 +59,63 @@ td {
   }
 
 
+.containFlex{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    width: 1200px;
+  }
 
-#facultyName{
+.facultyName{
+       order: 1;
       text-align: left;
       font-size: 1.5rem;
       font-weight: bold;
   }
 
-  #facultyID{
+  .facultyID{
+    order: 3;
       font-size: 1.5rem;
       font-weight: bold;
       padding-left: 20px;
      
   }
-#courseTitle{
+.courseTitle{
+  order: 2;
     font-size: 1.5rem;
     font-weight: bold;
-    padding-left: 4rem;
   }
 
+select {
+    width: 200px;
+}
+
+.search-bar{
+  margin: 1.5rem 0 1.5rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+}
+
+.selectYear{
+  padding: 0px 2rem 0px 2rem;
+}
+
+.selectSem{
+  padding: 0px 2rem 0px 2rem;
+}
+
+.selectDept{
+  padding: 0px 2rem 0px 2rem;
+}
+
+.search{
+  padding: 0px 2rem 0px 2rem;
+}
+
+.facultyList{
+  height: 80vh;
+  overflow: auto;
+}
