--- a/src/app/common-header/common-header.component.html
+++ b/src/app/common-header/common-header.component.html
@@ -7,8 +7,8 @@
         <nav class="navbar navbar-fixed-top">
             <div class="container-fluid">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon glyphicon-user" *ngIf="user">&nbsp;{{userName}}  [{{user.roles}}]</span> </a></li>
-                    <li><a href=""><i class="fas fa-users" (click)="logOut()"></i> Logout</a></li>
+                    <li><a href="#"><span class="glyphicon glyphicon glyphicon-user" *ngIf="user">&nbsp;{{userName}}&nbsp;[{{user.roles}}]</span> </a></li>
+                    <li><a href=""><i class="fa fa-power-offs" (click)="logOut()"></i> Logout</a></li>
                 </ul>
             </div>
 
