fixed search bar"

--- a/src/app/analytics/statement2/statement2.component.css
+++ b/src/app/analytics/statement2/statement2.component.css
@@ -42,6 +42,10 @@ td {
     background-color: #008CBA;
     color: white;
   }
+  .button:active {
+    background-color: #008CBA;
+    color: white;
+  }
 
   .charts{
       height: 100vh;
